# i-like-trains

./: .gitmodules  README.md  compile.sh  init.sh
firmware/: .gitignore  CMakeLists.txt  flash.sh  init.sh
firmware/src/: main.cpp
protobuf/: message.proto
src/: main.cpp
ui/: .gitignore  .prettierignore  buf.gen.yaml  package.json  vite.config.ts
ui/src/: app.html  app.scss
ui/src/lib/protobuf/: message_pb.ts
ui/src/routes/: +layout.svelte  +page.svelte  global.d.ts
ui/src/routes/babylon/: +page.svelte  SwitchIcon.svelte
ui/src/routes/track/: +page.svelte
ui/src/routes/unsupported/: +page.svelte
